Ui Changes, Clock Broken

--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,8 @@
             <div class="header">
                 <span>Keychain</span>
             </div>
-            <div class="keychain">
+            <div class="keychain" id="keychain">
                 <div class="keycount">Your keychain contains 2 keys</div>
-                <div class="keyslot" id="tempkeyslot">
-                    <div class="keycontents">
-                        <span class="keyname">Key 1</span>
-                        <br><span class="key">72953</span>
-                    </div>
-                </div>
-                
-                <div class="keyslot" id="tempkeyslot">
-                    <div class="keycontents">
-                        <span class="keyname">Key 2</span>
-                        <br><span class="key">64381</span>
-                    </div>
-                </div>
             </div>
         </div>
     </body>
